k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: domestic-rtp-payment-api
  labels:
    app: domestic-rtp-payment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domestic-rtp-payment-api
  template:
    metadata:
      labels:
        app: domestic-rtp-payment-api
    spec:
      containers:
        - name: domestic-rtp-payment-api
          image: domestic-rtp-payment-api:0.1.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
